<resources>
    <string name="app_name">Coalba2</string>

    <!-- ToolBar -->
    <string name="toolbar_logo">로고</string>
    <string name="toolbar_notice">알림</string>

    <!-- Base -->
    <string name="base_name1">김다은</string>
    <string name="base_name2">신지연</string>
    <string name="base_name3">조예진</string>
    <string name="base_store_name1">송이커피 숙대점</string>
    <string name="base_store_name2">송이마라탕 숙대점</string>
    <string name="base_store_name3">송이쌀국수 숙대점</string>
    <string name="base_time">15:00-19:00</string>
    <string name="base_starttime">15:00</string>
    <string name="base_endtime">19:00</string>
    <string name="base_ok">확인</string>
    <string name="base_cancel">취소</string>
    <string name="base_state">근무중</string>
    <string name="base_title">체계적이고 편리한 알바 스케줄링 서비스</string>

    <!-- BottomNavigation -->
    <string name="bottomnavigation_home">홈</string>
    <string name="bottomnavigation_workspace">워크스페이스</string>
    <string name="bottomnavigation_message">쪽지</string>
    <string name="bottomnavigation_mypage">마이페이지</string>

    <!-- ProfileRegister -->
    <string name="profileregister_title">프로필 등록</string>
    <string name="profileregister_name">이름</string>
    <string name="profileregister_et_name">이름을 적어주세요</string>
    <string name="profileregister_phonenumber">전화번호</string>
    <string name="profileregister_et_phonenumber">전화번호를 적어주세요</string>
    <string name="profileregister_birth">생년월일</string>
    <string name="profileregister_et_birth">생년월일 (yyyy-MM-dd)</string>
    <string name="profileregister_type">회원유형</string>
    <string name="profileregister_completion">완료</string>
    <string name="profileregister_CEO">사장</string>
    <string name="profileregister_parttime">알바생</string>

    <!-- ProfileEdit -->
    <string name="profileedit_title">프로필 수정</string>

    <!-- StoreEdit -->
    <string name="storeedit_title">가게 정보 수정</string>
    <string name="storeedit_name">가게 이름</string>
    <string name="storeedit_phonenumber">가게 전화번호</string>
    <string name="storeedit_address">가게 주소</string>
    <string name="storeedit_number">사업자번호</string>
    <string name="storeedit_worktype">근무 형태</string>
    <string name="storeedit_paymentmethod">알바비 지급 방식</string>
    <string name="storeedit_fix">고정</string>
    <string name="storeedit_weekly">주별</string>
    <string name="storeedit_monthly">월별</string>
    <string name="storeedit_weeklywage">주급</string>
    <string name="storeedit_monthlywage">월급</string>

    <!-- StoreRegister -->
    <string name="storeregister_title">가게 등록</string>
    <string name="storeregister_et_name">가게 이름을 적어주세요</string>
    <string name="storeregister_et_phonenumber">가게 전화번호를 적어주세요</string>
    <string name="storeregister_et_address">가게 주소를 적어주세요</string>
    <string name="storeregister_et_number">사업자번호를 적어주세요</string>

    <!-- Mypage -->
    <string name="mypage_CEO"> 사장님</string>
    <string name="mypage_greet">오늘도 수고하세요~</string>
    <string name="mypage_profile_modify">프로필 수정</string>
    <string name="mypage_store_modify">가게 정보 수정</string>
    <string name="mypage_title1">알바 관리</string>
    <string name="mypage_title2">개인 관리</string>
    <string name="mypage_manage1">근무내역 및 알바비 관리</string>
    <string name="mypage_manage2">대타근무 요청 관리</string>
    <string name="mypage_memo">메모장</string>
    <string name="mypage_logout">로그아웃</string>

    <!-- PartTimeJobManage -->
    <string name="parttimejobmanage_title">알바생 관리</string>
    <string name="parttimejobmanage_phonenumber">01012345678</string>
    <string name="parttimejobmanage_birth">1999.05.29</string>

    <!-- PartTimeJobAdd -->
    <string name="parttimejobadd_title">알바생 추가</string>
    <string name="parttimejobadd_email">알바생 이메일</string>
    <string name="parttimejobadd_et_email">이메일을 적어주세요</string>
    <string name="parttimejobadd_invite">초대하기</string>

    <!-- WorkspaceHome -->
    <string name="workspacehome_month">2022년 10월</string>
    <string name="workspacehome_sun">일</string>
    <string name="workspacehome_mon">월</string>
    <string name="workspacehome_tue">화</string>
    <string name="workspacehome_wed">수</string>
    <string name="workspacehome_thu">목</string>
    <string name="workspacehome_fri">금</string>
    <string name="workspacehome_sat">토</string>
    <string name="workspacehome_day">11</string>

    <!-- WorkHistory -->
    <string name="workhistory_title">근무내역 및 알바비 관리</string>
    <string name="workhistory_total_time">총 근로 시간</string>
    <string name="workhistory_total_pay">예상 근로비</string>
    <string name="workhistory_hour">시간</string>
    <string name="workhistory_minute">분</string>
    <string name="workhistory_sum">320,600</string>
    <string name="workhistory_won">원</string>
    <string name="workhistory_zero">30</string>

    <!-- ScheduleAdd -->
    <string name="scheduleadd_title">근무 스케줄 추가</string>
    <string name="scheduleadd_date">근무날짜</string>
    <string name="scheduleadd_exdate">2023-02-01</string>
    <string name="scheduleadd_time">근무시간</string>
    <string name="scheduleadd_colon">:</string>
    <string name="scheduleadd_starthour">15</string>
    <string name="scheduleadd_startminute">00</string>
    <string name="scheduleadd_endhour">19</string>
    <string name="scheduleadd_endminute">00</string>
    <string name="scheduleadd_person">알바생 선택</string>
    <string name="scheduleadd_experson">알바생을 선택해주세요</string>
    <string name="scheduleadd_wage">시급</string>
    <string name="scheduleadd_et_wage">알바 시급을 적어주세요</string>
    <string name="scheduleadd_plus">추가</string>

    <!-- Messagebox -->
    <string name="messagebox_date">2022/12/31</string>
    <string name="messagebox_content">안녕하세요! 사장님 잘부탁드립니다...</string>

    <!-- Message -->
    <string name="message_send">보낸 쪽지</string>
    <string name="message_receive">받은 쪽지</string>
    <string name="message_date">01/29 16:20</string>
    <string name="message_content">사장님!! 오늘 스케줄 나왔나요??</string>
    <string name="message_send_title">전달 메시지</string>
    <string name="message_send_content">전달할 메시지를 입력해주세요</string>
    <string name="message_send_count">0</string>
    <string name="message_send_slash">/</string>
    <string name="message_send_limit">150</string>
    <string name="message_send_btn">쪽지 보내기</string>

    <!-- SubstituteWork -->
    <string name="substitutework_process_title">대타근무 요청 처리</string>
    <string name="substitutework_detail_title">대타근무 요청 상세</string>
    <string name="substitutework_manage_title">대타근무 요청 관리</string>
    <string name="substitutework_message">요청 메시지</string>
    <string name="substitutework_exmessage">이날 갑자기 학교 시험 일정이 잡혀버려서요.. 대타 부탁드립니다!</string>
    <string name="substitutework_process_ok">요청 수락</string>
    <string name="substitutework_process_no">요청 거절</string>
    <string name="substitutework_process_dash">-</string>
    <string name="substitutework_state_refuse">거절</string>
    <string name="substitutework_state_submit">수락</string>

</resources>