<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:gravity="center"
        android:text="@string/workspacehome_month"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/workspacehome_sun"
            android:textColor="#ff0000"
            android:textSize="14dp"
            android:gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/workspacehome_mon"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/workspacehome_tue"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/workspacehome_wed"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/workspacehome_thu"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/workspacehome_fri"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/workspacehome_sat"
            android:textColor="#0000ff"
            android:textSize="14dp"
            android:gravity="center" />
    </LinearLayout>

    <!-- 회색줄 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="3dp"
        android:background="#bbb"/>

    <!-- 월에 해당하는 일 보여주기 위함-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>