<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_recyclerview"
    android:elevation="8dp"
    android:paddingVertical="12dp"
    android:paddingHorizontal="16dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp">

    <TextView
        android:id="@+id/tv_workhistory_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_name2"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_workhistory_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workhistory_total_time"
        android:textColor="@color/gray"
        android:textSize="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_workhistory_name"
        app:layout_constraintStart_toStartOf="@id/tv_workhistory_name"/>

    <TextView
        android:id="@+id/tv_workhistory_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheduleadd_starthour"
        android:textColor="@color/black"
        android:textSize="11dp"
        android:textStyle="bold"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@id/tv_workhistory_time"
        app:layout_constraintTop_toTopOf="@id/tv_workhistory_time"
        app:layout_constraintBottom_toBottomOf="@id/tv_workhistory_time"/>

    <TextView
        android:id="@+id/tv_workhistory_hour2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workhistory_hour"
        android:textColor="@color/black"
        android:textSize="11dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_workhistory_hour"
        app:layout_constraintTop_toTopOf="@id/tv_workhistory_hour"/>

    <TextView
        android:id="@+id/tv_workhistory_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workhistory_zero"
        android:textColor="@color/black"
        android:textSize="11dp"
        android:textStyle="bold"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@id/tv_workhistory_hour2"
        app:layout_constraintTop_toTopOf="@id/tv_workhistory_hour"/>

    <TextView
        android:id="@+id/tv_workhistory_minute2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workhistory_minute"
        android:textColor="@color/black"
        android:textSize="11dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_workhistory_minute"
        app:layout_constraintTop_toTopOf="@id/tv_workhistory_hour"/>

    <View
        android:id="@+id/ll_workhistory_item"
        android:layout_width="1dp"
        android:layout_height="14dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@id/tv_workhistory_minute2"
        app:layout_constraintTop_toTopOf="@id/tv_workhistory_hour"
        android:background="@color/line"/>

    <TextView
        android:id="@+id/tv_workhistory_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workhistory_total_pay"
        android:textColor="@color/gray"
        android:textSize="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_workhistory_name"
        app:layout_constraintStart_toEndOf="@id/ll_workhistory_item"/>

    <TextView
        android:id="@+id/tv_workhistory_won"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workhistory_sum"
        android:textColor="@color/black"
        android:textSize="11dp"
        android:textStyle="bold"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@id/tv_workhistory_sum"
        app:layout_constraintTop_toTopOf="@id/tv_workhistory_time"
        app:layout_constraintBottom_toBottomOf="@id/tv_workhistory_time"/>

    <TextView
        android:id="@+id/tv_workhistory_won2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workhistory_won"
        android:textColor="@color/black"
        android:textSize="11dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_workhistory_won"
        app:layout_constraintTop_toTopOf="@id/tv_workhistory_won"/>

</androidx.constraintlayout.widget.ConstraintLayout>