<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.StoreRegisterActivity">

    <ImageView
        android:id="@+id/iv_store_register_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_store_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storeregister_title"
        android:textColor="@color/black"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_store_register_back"
        app:layout_constraintBottom_toBottomOf="@id/iv_store_register_back"/>

    <ScrollView
        android:id="@+id/sv_store_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_store_register"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_store_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:layout_margin="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_store_register"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_emptyimg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cl_store_register" />

            <ImageView
                android:id="@+id/iv_store_register_camera"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_camera"
                android:src="@drawable/camera"
                app:layout_constraintEnd_toEndOf="@id/iv_store_register"
                app:layout_constraintBottom_toBottomOf="@+id/iv_store_register"/>

            <TextView
                android:id="@+id/tv_store_register_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/storeedit_name"
                app:layout_constraintTop_toBottomOf="@+id/iv_store_register"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/et_store_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/storeregister_et_name"
                android:textSize="15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_store_register_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_store_register_phonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/storeedit_phonenumber"
                app:layout_constraintTop_toBottomOf="@+id/et_store_register_name"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/et_store_register_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/storeregister_et_phonenumber"
                android:textSize="15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_store_register_phonenumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_store_register_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/storeedit_address"
                app:layout_constraintTop_toBottomOf="@+id/et_store_register_phonenumber"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/et_store_register_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/storeregister_et_address"
                android:textSize="15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_store_register_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_store_register_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/storeedit_number"
                app:layout_constraintTop_toBottomOf="@+id/et_store_register_address"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/et_store_register_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/storeregister_et_number"
                android:textSize="15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_store_register_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_store_register_worktype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/storeedit_worktype"
                app:layout_constraintTop_toBottomOf="@+id/et_store_register_number"
                app:layout_constraintStart_toStartOf="parent"/>

            <RadioGroup
                android:id="@+id/rg_store_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_store_register_worktype">

                <RadioButton
                    android:id="@+id/rb_fix"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_weight="1"
                    android:text="@string/storeedit_fix" />

                <RadioButton
                    android:id="@+id/rb_weekly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_weight="1"
                    android:text="@string/storeedit_weekly"/>

                <RadioButton
                    android:id="@+id/rb_monthly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_weight="1"
                    android:text="@string/storeedit_monthly"/>
            </RadioGroup>

            <TextView
                android:id="@+id/tv_store_register_paymentmethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/storeedit_paymentmethod"
                app:layout_constraintTop_toBottomOf="@+id/rg_store_register"
                app:layout_constraintStart_toStartOf="parent"/>

            <RadioGroup
                android:id="@+id/rg_store_register_paymentmethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_store_register_paymentmethod">

                <RadioButton
                    android:id="@+id/rb_weeklywage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_weight="1"
                    android:text="@string/storeedit_weeklywage" />

                <RadioButton
                    android:id="@+id/rb_monthlywage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_weight="1"
                    android:text="@string/storeedit_monthlywage"/>
            </RadioGroup>

            <Button
                android:id="@+id/btn_store_register_finish"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bg_basicbtn"
                android:layout_marginTop="60dp"
                android:layout_marginHorizontal="12dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/profileregister_completion"
                app:layout_constraintTop_toBottomOf="@id/rg_store_register_paymentmethod"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>