<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.MessageSendActivity">

    <ImageView
        android:id="@+id/iv_messagesend_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_messagesend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_name1"
        android:textColor="@color/black"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_messagesend_back"
        app:layout_constraintBottom_toBottomOf="@id/iv_messagesend_back"/>

    <TextView
        android:id="@+id/tv_messagesend_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/message_send_title"
        android:layout_marginTop="48dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_messagesend"/>

    <EditText
        android:id="@+id/et_messagesend"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_mypage"
        android:hint="@string/message_send_content"
        android:gravity="start"
        android:padding="12dp"
        android:textSize="11dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_messagesend_title"/>

    <TextView
        android:id="@+id/tv_messagesend_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11dp"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:text="@string/message_send_count"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toStartOf="@id/tv_messagesend_slash"
        app:layout_constraintBottom_toBottomOf="@id/et_messagesend"/>

    <TextView
        android:id="@+id/tv_messagesend_slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11dp"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:text="@string/message_send_slash"
        app:layout_constraintEnd_toStartOf="@id/tv_messagesend_limit"
        app:layout_constraintTop_toTopOf="@id/tv_messagesend_count"
        app:layout_constraintBottom_toBottomOf="@id/tv_messagesend_count"/>

    <TextView
        android:id="@+id/tv_messagesend_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11dp"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:text="@string/message_send_limit"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_messagesend_count"
        app:layout_constraintBottom_toBottomOf="@id/tv_messagesend_count"/>

    <Button
        android:id="@+id/btn_messagesend"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/bg_basicbtn"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="12dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/message_send_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>